--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-native-masked-text": "^1.13.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.7",
-    "react-navigation": "^4.0.10"
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^1.10.2"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.1.0",
