--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.5.6",
+    "react-redux": "^7.1.1",
     "redux": "^4.0.4",
     "redux-saga": "^1.1.1"
   },
