--- a/app.json
+++ b/app.json
@@ -1,10 +1,14 @@
 {
   "expo": {
     "name": "Bee Delivery para Entregadores",
-    "slug": "bee-delivery",
+    "slug": "bee",
     "privacy": "unlisted",
     "sdkVersion": "35.0.0",
-    "platforms": ["ios", "android", "web"],
+    "platforms": [
+      "ios",
+      "android",
+      "web"
+    ],
     "version": "0.1.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -17,9 +21,12 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
-    }
+    },
+    "description": ""
   }
 }
