--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "react-devtool": "react-devtools",
+    "redux-devtool": "remotedev"
   },
   "dependencies": {
     "axios": "^0.19.0",
@@ -38,9 +40,12 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-standard": "^4.0.1",
+    "react-devtools": "^3",
     "reactotron-react-native": "^4.0.2",
     "reactotron-redux": "^3.1.2",
-    "reactotron-redux-saga": "^4.2.2"
+    "reactotron-redux-saga": "^4.2.2",
+    "remote-redux-devtools": "^0.5.16",
+    "remotedev-server": "^0.3.1"
   },
   "private": true
 }
