--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
   },
   "plugins": ["react"],
   "rules": {
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "no-throw-literal": "off"
   }
 }
